[gd_scene load_steps=6 format=3 uid="uid://dn2ej8wtxey2u"]

[ext_resource type="Script" uid="uid://o7gvfbtlpyva" path="res://entities/card/shell/shell_card.gd" id="1_gssri"]
[ext_resource type="Texture2D" uid="uid://ben7qqx34vpkq" path="res://entities/card/images/card_back.png" id="2_2dd2c"]
[ext_resource type="Texture2D" uid="uid://cq38tr3k0do84" path="res://entities/card/images/card_empty.png" id="3_b7g5p"]
[ext_resource type="PackedScene" uid="uid://cyr4dfy8qnwh6" path="res://entities/token/token.tscn" id="4_kwg8u"]
[ext_resource type="PackedScene" uid="uid://bj151eadmuuw2" path="res://entities/sked/sked.tscn" id="5_x0y2x"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_gssri")
value = 2
resource = Object(TextureRect,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":2,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":0,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":222.0,"offset_bottom":324.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"localize_numeral_system":true,"tooltip_text":"","tooltip_auto_translate_mode":0,"focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":0,"focus_behavior_recursive":0,"mouse_filter":1,"mouse_behavior_recursive":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"accessibility_name":"","accessibility_description":"","accessibility_live":0,"accessibility_controls_nodes":Array[NodePath]([]),"accessibility_described_by_nodes":Array[NodePath]([]),"accessibility_labeled_by_nodes":Array[NodePath]([]),"accessibility_flow_to_nodes":Array[NodePath]([]),"theme":null,"theme_type_variation":&"","texture":ExtResource("2_2dd2c"),"expand_mode":0,"stretch_mode":0,"flip_h":false,"flip_v":false,"script":null)


[node name="Backface" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 222.0
offset_bottom = 324.0
texture = ExtResource("2_2dd2c")

[node name="Frontface" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 222.0
offset_bottom = 324.0
texture = ExtResource("3_b7g5p")

[node name="MarginContainer" type="MarginContainer" parent="Frontface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="NameLabel" type="Label" parent="Frontface/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "Nice Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightUpContainer" type="VBoxContainer" parent="Frontface/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 4
alignment = 1

[node name="CostToken" parent="Frontface/MarginContainer/RightUpContainer" instance=ExtResource("4_kwg8u")]
unique_name_in_owner = true
layout_mode = 2
core = 3
value_int = 1

[node name="FactionToken" parent="Frontface/MarginContainer/RightUpContainer" instance=ExtResource("4_kwg8u")]
unique_name_in_owner = true
layout_mode = 2

[node name="LeftDownContainer" type="VBoxContainer" parent="Frontface/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="TypeLabel" type="Label" parent="Frontface/MarginContainer/LeftDownContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 16
theme_override_font_sizes/font_size = 18
text = "Tactic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sked" parent="Frontface/MarginContainer/LeftDownContainer" node_paths=PackedStringArray("card") instance=ExtResource("5_x0y2x")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
card = NodePath("../../../..")

[node name="LevelToken" parent="Frontface/MarginContainer" instance=ExtResource("4_kwg8u")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
core = 7
value_int = 0
